@startuml

class Car {
    - _id: String
    - _model: String
    - _brand: String
    + Car(id: String, model: String, brand: String)
    + getId(): String
    + getModel(): String
    + getBrand(): String
}

class CarEvaluator {
    + getBestCar(cars: List<Car>): Car
}

class CarFormatter {
    + formatCarsNames(cars: List<Car>): String
}

class CarRepository {
    - carsDb: List<Car>
    + getCarById(carId: String): Car
    + getAllCars(): List<Car>
}

class CarManager {
    - carRepository: CarRepository
    - carEvaluator: CarEvaluator
    - carFormatter: CarFormatter
    + CarManager(carRepository: CarRepository, carEvaluator: CarEvaluator, carFormatter: CarFormatter)
    + getCarById(carId: String): Car
    + getCarsNames(): String
    + getBestCar(): Car
}

CarManager --> CarRepository
CarManager --> CarEvaluator
CarManager --> CarFormatter
CarRepository --> Car
CarEvaluator --> Car
CarFormatter --> Car

@enduml
